Added resume page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <br />
         <hr />
         <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me </a>
+        <a href="./public/resume.html">Resume</a>
+        <a href="./public/contact.html">Contacts</a>
     </font>
     </body>
 </html>
