--- a/public/contact.html
+++ b/public/contact.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacts</title>
 </head>
 <body bgcolor="a3c9ff">
     <font color="#152b4a">
-        <h1>Contact Me</h1>
         <p>Tel: +39 3803662992</p>
         <p>Email: samir.ibrahim@outlook.it</p>
     </font>    
