--- a/public/resume.html
+++ b/public/resume.html
@@ -26,7 +26,7 @@
         <ul> 
             <li>Cub3d (Language: C) - Recreating a scene of the classic 'Wolfenstein 3D' game using Raycasting</li>
             <br>
-            <li>Fdf (Language: C) - Representing a landscape as a 3D Wireframe Model (C)</li>
+            <li>Fdf (Language: C) - Representing a landscape as a 3D Wireframe Model</li>
         </ul>
     </ul>
     <hr>
